更新sewagger描述。
